examples/errors/1065-errors-shadowed-error-set-forward-ref.sx
// A fn signature's forward reference to a SHADOWED name binds the local
// (same-file) author — own wins (specs.md "Collision rules"), exactly as it
// does when the decl sits above the fn. Here `E` is BOTH imported (a struct,
// from the companion module) and declared locally below as an error set: the
// signature, the body, and the call site must all agree on the LOCAL error
// set, so `f(error.Fault)` takes the `e == error.Fault` arm (r=1).
//
// Regression (issue 0212): the signature used to bind the IMPORTED struct via
// the findByName first-author fallback while the body bound the local error
// set — the param value was ABI-mangled through the empty struct and the
// comparison silently evaluated false (r=0, exit 0, no diagnostic).
#import "modules/std.sx";
#import "1065-errors-shadowed-error-set-forward-ref/a.sx";
f :: (e: E) -> i32 {
    if e == error.Fault { return 1; }
    return 0;
}
E :: error { Fault }
main :: () -> i32 {
    r := f(error.Fault);
    print("r={}\n", r);
    return 0;
}
